--- a/home.html
+++ b/home.html
@@ -378,6 +378,8 @@
   <script src="js/modules/GovernmentUI.js"></script>
   <script src="js/modules/HospitalUI.js"></script>
   <script src="js/modules/ReportUI.js"></script>
+  <script src="js/modules/ReferenceUI.js"></script>
+  <script src="js/modules/PersonalDashboardUI.js"></script>
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
