In Progress - Report 360

--- a/home.html
+++ b/home.html
@@ -367,55 +367,64 @@
   <script src="js/widgets/mylinks-widget.js"></script>
   <script src="js/widgets/chat-widget.js"></script>
 
-  <script src="js/modules/modules-script.js"></script>
-  <script src="js/modules/PurchaseOrderUI.js"></script>
-  <script src="js/modules/PayrollScheduleUI.js"></script>
-  <script src="js/modules/HrRequisitionUI.js"></script>
-  <script src="js/modules/UserUI.js"></script>
-  <script src="js/modules/EmployeeUI.js"></script>
-  <script src="js/modules/InventoryUI.js"></script>
-  <script src="js/modules/AccountingUI.js"></script>
-  <script src="js/modules/GovernmentUI.js"></script>
-  <script src="js/modules/HospitalUI.js"></script>
-  <script src="js/modules/ReportUI.js"></script>
-  <script src="js/modules/ReferenceUI.js"></script>
   <script src="js/modules/PersonalDashboardUI.js"></script>
+  <script src="js/modules/RecruitmentUI.js"></script>
+  <script src="js/modules/EmployeeUI.js"></script>
+  <script src="js/modules/PayrollUI.js"></script>
+  <script src="js/modules/InventoryUI.js"></script>
+  <script src="js/modules/HospitalUI.js"></script>
+  <script src="js/modules/GovernmentUI.js"></script>
+  <script src="js/modules/SchoolUI.js"></script>
+  <script src="js/modules/ReviewCenterUI.js"></script>
+  <script src="js/modules/AccountingUI.js"></script>
+  <script src="js/modules/ReferenceUI.js"></script>
+  <script src="js/modules/ReportUI.js"></script>
 
-  <script src="js/modules/submodules/PersonTaskUI.js"></script>
-  <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
-  <script src="js/modules/submodules/EmployeeTeamMemberUI.js"></script>
-  <script src="js/modules/submodules/ProductUI.js"></script>
-  <script src="js/modules/submodules/SupplierUI.js"></script>
   <script src="js/modules/submodules/AccountChartUI.js"></script>
-  <script src="js/modules/submodules/ExpenseUI.js"></script>
-  <script src="js/modules/submodules/SalesOrderUI.js"></script>
-  <script src="js/modules/submodules/TaxPeriodUI.js"></script>
-
-  <script src="js/modules/submodules/ReconcileUI.js"></script>
+  <script src="js/modules/submodules/AccountingDashboardUI.js"></script>
+  <script src="js/modules/submodules/AccountingReportUI.js"></script>
   <script src="js/modules/submodules/BankingUI.js"></script>
-  <script src="js/modules/submodules/ProductRequestUI.js"></script>
-  <script src="js/modules/submodules/RealEstateUI.js"></script>
+  <script src="js/modules/submodules/BusinessPermitUI.js"></script>
   <script src="js/modules/submodules/CitizenUI.js"></script>
   <script src="js/modules/submodules/CommunityTaxCertificateUI.js"></script>
-  <script src="js/modules/submodules/BusinessPermitUI.js"></script>
-  <script src="js/modules/submodules/GovernmentCashierUI.js"></script>
+  <script src="js/modules/submodules/EmployeeTeamMemberUI.js"></script>
+  <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
+  <script src="js/modules/submodules/ExpenseUI.js"></script>
   <script src="js/modules/submodules/GovernmentAccountingUI.js"></script>
-  <script src="js/modules/submodules/GovernmentReportsUI.js"></script>
+  <script src="js/modules/submodules/GovernmentCashierUI.js"></script>
   <script src="js/modules/submodules/GovernmentPrintingUI.js"></script>
-  <script src="js/modules/submodules/RealEstateTaxUI.js"></script>
-  <script src="js/modules/submodules/RealEstateTransferUI.js"></script>
+  <script src="js/modules/submodules/GovernmentReportsUI.js"></script>
+  <script src="js/modules/submodules/HrRequisitionUI.js"></script>
+  <script src="js/modules/submodules/ManualEntryUI.js"></script>
+  <script src="js/modules/submodules/PayableUI.js"></script>
+  <script src="js/modules/submodules/PayrollScheduleUI.js"></script>
+  <script src="js/modules/submodules/PersonTaskUI.js"></script>
+  <script src="js/modules/submodules/PersonUI.js"></script>
+  <script src="js/modules/submodules/ProductRequestUI.js"></script>
+  <script src="js/modules/submodules/ProductUI.js"></script>
+  <script src="js/modules/submodules/PurchaseOrderUI.js"></script>
+  <script src="js/modules/submodules/RealEstateBuildingPermitUI.js"></script>
   <script src="js/modules/submodules/RealEstateElectricalPermitUI.js"></script>
   <script src="js/modules/submodules/RealEstatePlumbingPermitUI.js"></script>
-  <script src="js/modules/submodules/RealEstateBuildingPermitUI.js"></script>
+  <script src="js/modules/submodules/RealEstateTaxUI.js"></script>
+  <script src="js/modules/submodules/RealEstateTransferUI.js"></script>
+  <script src="js/modules/submodules/RealEstateUI.js"></script>
+  <script src="js/modules/submodules/ReceivableUI.js"></script>
+  <script src="js/modules/submodules/ReconcileUI.js"></script>
+  <script src="js/modules/submodules/SalesOrderUI.js"></script>
+  <script src="js/modules/submodules/SupplierUI.js"></script>
+  <script src="js/modules/submodules/TaxPeriodUI.js"></script>
+  <script src="js/modules/submodules/UserUI.js"></script>
 
-  <script src="js/saas/ReviewCenter.js"></script>
-  
+ 
   <script src="js/main-initializer.js"></script>
-  <script src="js/global-events-others.js"></script>
-  <script src="js/global-events-hr.js"></script>
-  <script src="js/global-events-accounting.js"></script>
-  <script src="js/global-events-government.js"></script>
-  <script src="js/global-events.js"></script>
+
+  <script src="js/events/global-events-others.js"></script>
+  <script src="js/events/global-events-hr.js"></script>
+  <script src="js/events/global-events-accounting.js"></script>
+  <script src="js/events/global-events-government.js"></script>
+  <script src="js/events/global-events.js"></script>
+
   <script src="js/mainJS.js"></script>
 </body>
 
